--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script>console.log("[index.html] loaded");</script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
